refactor: Rename project to trolytaophuluc
Update package.json, vite.config.ts, metadata.json, and GitHub Actions workflow to reflect the new project name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tro-ly-bien-tap-phu-luc-i-va-iii",
+  "name": "trolytaophuluc",
   "private": true,
   "version": "0.0.0",
   "type": "module",
